--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,15 +1,16 @@
 {
   "version": 2,
+  "name": "Twitter Stack",
   "builds": [
     {
-      "src": "index.js",
+      "src": "./index.js",
       "use": "@vercel/node"
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "/index.js"
+      "dest": "/"
     }
   ]
 }
